Fixed out of stock button issue on mobile

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5344,7 +5344,6 @@ body {
   border-radius: 4rem;
   font-size: 20px;
   font-weight: 900;
-  text-transform: uppercase;
   font-family: "Open Sans", sans-serif;
   justify-content: center;
   align-items: center;
