--- a/styles/_product.scss
+++ b/styles/_product.scss
@@ -1242,7 +1242,7 @@
     border-radius: 4rem;
     font-size: 20px;
     font-weight: 900;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
     justify-content: center;
     align-items: center;
